// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkSectionHeader should render correctly 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header--title-description"
    >
      <h2
        class="bpk-text bpk-text--body-default bpk-section-header--title"
      >
        Section title
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSectionHeader should render correctly with a "description" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header--title-description"
    >
      <h2
        class="bpk-text bpk-text--body-default bpk-section-header--title"
      >
        Section title
      </h2>
      <span
        class="bpk-text bpk-text--body-default"
      >
        Section title description
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkSectionHeader should render correctly with an "button" prop 1`] = `
<DocumentFragment>
  <div
    class="bpk-section-header"
  >
    <div
      class="bpk-section-header--title-description"
    >
      <h2
        class="bpk-text bpk-text--body-default bpk-section-header--title"
      >
        Section title
      </h2>
      <span
        class="bpk-text bpk-text--body-default"
      >
        Section title description
      </span>
    </div>
    <button
      class="bpk-button"
      type="button"
    >
      View more
    </button>
  </div>
</DocumentFragment>
`;
